Update after first review

--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import library and dataset"
+    "### Import library and Gather dataset"
    ]
   },
   {
@@ -315,6 +315,13 @@
     "\n",
     "df = pd.read_csv('./survey_results_public_2019.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean data"
    ]
   },
   {
@@ -967,6 +974,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analyze Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -1308,32 +1322,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_dummy_df(df, cat_cols):\n",
-    "    for col in cat_cols:\n",
-    "        df = pd.concat([df.drop(col,axis=1),df[col].str.get_dummies(sep=';').rename(lambda x: col + '_' + x, axis='columns')],axis=1)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Function that creates dummy columns for fields containing single answer"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_dummy_df2(df, cat_cols):\n",
+    "    \"\"\"Convert categorical columns into many dummy columns\"\"\"\n",
+    "    \n",
     "    for col in cat_cols:\n",
     "        df = pd.concat([df.drop(col,axis=1),pd.get_dummies(df[col],prefix=col,prefix_sep='_', drop_first=True, dummy_na=True)],axis=1)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dummy_df(df, cat_cols):\n",
+    "    \"\"\"This is revised based on above funcion. It is for fields containing multiple answers seperated by '; \"\"\"\n",
+    "    \n",
+    "    for col in cat_cols:\n",
+    "        df = pd.concat([df.drop(col,axis=1),df[col].str.get_dummies(sep=';').rename(lambda x: col + '_' + x, axis='columns')],axis=1)\n",
     "    return df"
    ]
   },
@@ -2656,7 +2667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What factors have significant influence on salary"
+    "##### What factors have significant influence on salary"
    ]
   },
   {
@@ -2929,6 +2940,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Q1 Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Build a linear regression model, split train and test dataset, train the data and get the model. Then predict and evaluate the model."
    ]
   },
@@ -3178,6 +3196,13 @@
    ],
    "source": [
     "r2_score(y_salary_test, y_salary_hat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q1 Result Table"
    ]
   },
   {
@@ -3457,7 +3482,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What factors have significant influence on career satisfaction"
+    "### Q2 Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What factors have significant influence on career satisfaction"
    ]
   },
   {
@@ -4142,6 +4174,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2 Result Table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
@@ -4315,7 +4354,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What factors have significant influence on life of next generation"
+    "### Q3 Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What factors have significant influence on life of next generation"
    ]
   },
   {
@@ -4891,6 +4937,13 @@
    "metadata": {},
    "source": [
     "model score is OK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q3 Result Table"
    ]
   },
   {
